--- a/towns.html
+++ b/towns.html
@@ -21,6 +21,8 @@
 <div>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
+    <input type="text" id="townNameForAdd" />
+    <button id="btnAdd">Add</button>
 </div>
 <div id="result"></div>
 
