--- a/towns.html
+++ b/towns.html
@@ -23,6 +23,7 @@
     <button id="btnDelete">Delete</button>
     <input type="text" id="townNameForAdd" />
     <button id="btnAdd">Add</button>
+	<button id="btnShuffle">Shuffle</button>
 </div>
 <div id="result"></div>
 
