--- a/towns.html
+++ b/towns.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
+
 <head>
     <title>Towns</title>
 	<link rel="stylesheet" href="towns.css" />
@@ -10,13 +12,21 @@
 
 <body>
 
-<h1>Towns</h1>
-<select id="towns" size="4">
-    <option>Sofia</option>
-    <option>Plovdiv</option>
-    <option>Varna</option>
-    <option>Bourgas</option>
-</select>
+<article>
+  	<header>Towns</header>
+  	<select id="towns" size="4">
+        	<option>Sofia</option>
+        	<option>Plovdiv</option>
+        	<option>Varna</option>
+        	<option>Bourgas</option>
+  	</select>
+</article>
+  	
+<article>
+    <header>Delete Existing Town</header>
+    <input type="text" id="townName" />
+    <button id="btnDelete">Delete</button>
+</article>
 
 <div>
     <input type="text" id="townName" />
